# gearman-interface

./: .bzrignore  Makefile.am  README  configure.ac  signfile.sh
config/: autorun.sh  pre_hook.sh
interface/: globals.i
interface/libgearman/: client.i  gearman.i  job.i  universal.i  worker.i
interface/lua/: libgearman.i
interface/python/: buffer_input.i  do_return.i  gearman_workload.i  libgearman.i  value_return.i  worker_callback.i
interface/python3/: do_return.i  gearman_workload.i  libgearman.i  worker_callback.i
interface/ruby/: job_handle_out.i  libgearman.i  value_return.i  worker_callback.i
interface/xml/: Makefile.am  libgearman.i
lua/: Makefile.am  libdrizzle.i
m4/: pandora_have_libgearman.m4  pandora_swig.m4  with_lua.m4  with_perl.m4  with_python.m4  with_python3.m4  with_r.m4  with_ruby.m4
perl/: Makefile.PL  Makefile.am  libdrizzle.i  test.pl
php/: Makefile.am
python/: setup.py  test_client.py  test_worker.py
python/gearman/: release.py.in
python3/: PKG-INFO  README  setup.py  test_client.py  test_worker.py
ruby/: LICENSE  Makefile.am  README  Rakefile  client.rb  libdrizzle.i  release.rb.in  test_client.rb  test_worker.rb
ruby/ext/: extconf.rb
xml/: libdrizzle.i
